// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing snapshot of different components App component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div>
          <div
            class="login"
          >
            <div
              class="center"
            >
              <h3>
                Login
              </h3>
            </div>
            <form>
              <div
                class="login-options"
              >
                <label>
                  Username:
                </label>
                <input
                  data-testid="username"
                  placeholder="Username"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="login-options"
              >
                <label>
                  Password:
                </label>
                <input
                  data-testid="password"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </div>
              <div
                class="login-submit-button"
              >
                <div>
                  <button
                    class="question-show-button"
                    disabled=""
                    type="submit"
                  >
                    Login
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div>
        <div
          class="login"
        >
          <div
            class="center"
          >
            <h3>
              Login
            </h3>
          </div>
          <form>
            <div
              class="login-options"
            >
              <label>
                Username:
              </label>
              <input
                data-testid="username"
                placeholder="Username"
                type="text"
                value=""
              />
            </div>
            <div
              class="login-options"
            >
              <label>
                Password:
              </label>
              <input
                data-testid="password"
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div
              class="login-submit-button"
            >
              <div>
                <button
                  class="question-show-button"
                  disabled=""
                  type="submit"
                >
                  Login
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing snapshot of different components Header  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <nav
          class="nav"
        >
          <div
            class="nav-div"
          >
            <div
              class="nav-left"
            >
              <ul>
                <li>
                  <a
                    class=""
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li>
                  <a
                    class="active-nav"
                    href="/leaderboard"
                  >
                    Leaderboard
                  </a>
                </li>
                <li>
                  <a
                    class=""
                    href="/add"
                  >
                    New Question
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="nav-right"
            >
              <ul>
                <li
                  class="avatar-smaller"
                >
                  <a
                    href="/"
                  />
                </li>
                <li>
                  <a
                    href="/"
                  />
                </li>
                <li>
                  <a
                    to="/login"
                  >
                    Logout
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header>
      <nav
        class="nav"
      >
        <div
          class="nav-div"
        >
          <div
            class="nav-left"
          >
            <ul>
              <li>
                <a
                  class=""
                  href="/"
                >
                  Home
                </a>
              </li>
              <li>
                <a
                  class="active-nav"
                  href="/leaderboard"
                >
                  Leaderboard
                </a>
              </li>
              <li>
                <a
                  class=""
                  href="/add"
                >
                  New Question
                </a>
              </li>
            </ul>
          </div>
          <div
            class="nav-right"
          >
            <ul>
              <li
                class="avatar-smaller"
              >
                <a
                  href="/"
                />
              </li>
              <li>
                <a
                  href="/"
                />
              </li>
              <li>
                <a
                  to="/login"
                >
                  Logout
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing snapshot of different components Leaderboard Component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        No data found
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      No data found
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
